# machiavellarium

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
configs/: default.toml
crates/machiavellarium-cli/: Cargo.toml
crates/machiavellarium-cli/src/: main.rs
crates/machiavellarium-core/: Cargo.toml
crates/machiavellarium-core/src/: config.rs  error.rs  lib.rs
crates/machiavellarium-env/: Cargo.toml
crates/machiavellarium-env/src/: lib.rs  simulation.rs
