[workspace]
resolver = "2"
members = [
    "crates/machiavellarium-core",
    "crates/machiavellarium-env",
    "crates/machiavellarium-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agent-society-project/machiavellarium"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
machiavellarium-core = { path = "crates/machiavellarium-core" }
machiavellarium-env = { path = "crates/machiavellarium-env" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
