[package]
name = "machiavellarium-cli"
description = "CLI entry point for Machiavellarium experiments"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "machiavellarium"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
machiavellarium-core = { workspace = true }
machiavellarium-env = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
