[package]
name = "machiavellarium-core"
description = "Shared types, configuration, and errors for Machiavellarium"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
