[package]
name = "machiavellarium-env"
description = "Simulated environment for multi-agent social interaction experiments"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
machiavellarium-core = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
